--- a/wp-content/themes/ualbany/resources/assets/acf-json/country_general_settings.json
+++ b/wp-content/themes/ualbany/resources/assets/acf-json/country_general_settings.json
@@ -33,7 +33,7 @@
         ]
     ],
     "menu_order": 0,
-    "position": "normal",
+    "position": "acf_after_title",
     "style": "default",
     "label_placement": "top",
     "instruction_placement": "label",
