--- a/wp-content/themes/ualbany/resources/assets/acf-json/program_general_settings.json
+++ b/wp-content/themes/ualbany/resources/assets/acf-json/program_general_settings.json
@@ -346,6 +346,50 @@
             "max": "",
             "step": "",
             "readonly": 1
+        },
+        {
+            "key": "program_dates",
+            "label": "Dates (Hidden)",
+            "name": "program_dates",
+            "type": "hidden",
+            "instructions": "",
+            "required": 0,
+            "conditional_logic": 0,
+            "wrapper": {
+                "width": "",
+                "class": "",
+                "id": ""
+            },
+            "default_value": "",
+            "placeholder": "",
+            "prepend": "",
+            "append": "",
+            "min": "",
+            "max": "",
+            "step": "",
+            "readonly": 1
+        }
+        {
+            "key": "program_type",
+            "label": "Program Type (Hidden)",
+            "name": "program_dates",
+            "type": "text",
+            "instructions": "",
+            "required": 0,
+            "conditional_logic": 0,
+            "wrapper": {
+                "width": "",
+                "class": "",
+                "id": ""
+            },
+            "default_value": "",
+            "placeholder": "",
+            "prepend": "",
+            "append": "",
+            "min": "",
+            "max": "",
+            "step": "",
+            "readonly": 1
         }
     ],
     "location": [
