Hidden program_type full

--- a/wp-content/themes/ualbany/resources/assets/acf-json/program_general_settings.json
+++ b/wp-content/themes/ualbany/resources/assets/acf-json/program_general_settings.json
@@ -373,7 +373,7 @@
             "key": "program_type",
             "label": "Program Type (Hidden)",
             "name": "program_dates",
-            "type": "text",
+            "type": "hidden",
             "instructions": "",
             "required": 0,
             "conditional_logic": 0,
