--- a/wp-content/themes/ualbany/resources/assets/config.json
+++ b/wp-content/themes/ualbany/resources/assets/config.json
@@ -9,7 +9,7 @@
     ]
   },
   "publicPath": "/wp-content/themes/ualbany",
-  "devUrl": "http://localhost:8888",
+  "devUrl": "http://ualbany.test",
   "proxyUrl": "http://localhost:3000",
   "cacheBusting": "[name]_[hash:8]",
   "watch": [
