--- a/wp-content/themes/ualbany/package.json
+++ b/wp-content/themes/ualbany/package.json
@@ -130,6 +130,7 @@
     "bootstrap": "^4.0.0-beta",
     "font-awesome": "~4.7",
     "jquery": "1.12.4 - 3",
+    "moment": "^2.22.1",
     "popper.js": "~1.11"
   }
 }
