updated about template fields

--- a/wp-content/themes/ualbany/resources/assets/acf-json/page_general_settings.json
+++ b/wp-content/themes/ualbany/resources/assets/acf-json/page_general_settings.json
@@ -130,6 +130,11 @@
                 "param": "post_type",
                 "operator": "==",
                 "value": "page"
+            },
+            {
+                "param": "post_template",
+                "operator": "!=",
+                "value": "views\/page-basic-about.blade.php"
             }
         ]
     ],
